Incluida a tela de configuracao do cartao

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -86,9 +86,9 @@
 						<div class="mainmenu pull-left">
 							<ul class="nav navbar-nav collapse navbar-collapse">
 								<li><a href="index.html" class="active">Home</a></li>
-								<li class="dropdown"><a href="#">Produtos<i class="fa fa-angle-down"></i></a>
+								<li class="dropdown"><a routerLink="/cartao" routerLinkActive="active">Produtos<i class="fa fa-angle-down"></i></a>
 									<ul role="menu" class="sub-menu">
-										<li><a href="Shop.html">Cartao de visita</a></li>
+										<li><a routerLink="/cartao" routerLinkActive="active">Cartao de visita</a></li>
 									</ul>
 								</li>
 								<li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
