Adicionado ajuste ao botão configure aqui

--- a/src/app/cartao/cartao.component.html
+++ b/src/app/cartao/cartao.component.html
@@ -21,7 +21,7 @@
           Na próxima tela você pode configurar as especificações do seu produto e conferir o preço
         </span><br>
             <!-- <button type="button" class="btn btn-default get">CONFIGURE AQUI</button> -->
-            <a class="button" routerLink="/config-cartao" >CONFIGURE AQUI</a>
+            <a class="btn btn-info" routerLink="/config-cartao" >CONFIGURE AQUI</a>
           </div>
           <div class="col-sm-6">
             <img src="assets/images/home/cartao-visita.jpg" class="girl img-responsive" alt="">
